--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Kanit:ital@1&family=Lobster&display=swap');
+
+/* font-family: 'Alkatra', cursive;
+font-family: 'Kanit', sans-serif;
+font-family: 'Lobster', cursive; */
 
 * {
     box-sizing: border-box;
@@ -8,12 +13,14 @@
     --sunglow: #FFC917;
     --red: #F00000;
     --dark-red: #8C0000;
-    --black: #050505;
+    --black: #050505fc;
   }
 
 body {
     margin: 0;
     padding: 0;
+    background-color: #202020;
+    color: white;
 }
 
 
@@ -33,14 +40,17 @@ body {
 }
 
 .business-title {
-    font-size: 1.5rem;
-    padding-top: 3%;
-    padding-left: 5%;
-    padding-bottom: 4%;
-    /* margin: .5rem; */
+    font-size: 40px;
+    margin: 0 !important;
 
 }
+.justfixit{
+
+    padding-left: 5%;
+    font-family: 'Lobster', cursive;
+}
 .phone{
+    padding-left: 5%;
     font-size: 1.0rem;
 }
 
@@ -120,3 +130,50 @@ body {
         display: flex;
     }
 }
+
+
+/* **Home Main Section */
+.experience{
+    text-align: center;
+    font-family: 'Kanit', sans-serif;
+    font-size: 30px;
+}
+.options{
+    text-align: center;
+    font-family: 'Alkatra', cursive;
+    font-size: 25px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.shop-photo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+}
+
+/* **: FOOTER */
+.footer{
+    background-color: var(--yellow);
+    padding-top: 20px;
+    color: var(--black);
+}
+.footer-title{
+    font-family: 'Kalam', cursive;
+    text-align: center !important;
+}
+.footer-logos{
+    display:flex;
+    justify-content: space-between;
+    margin:10px;
+    padding: 10px;
+    padding-left: 30%;
+    padding-right: 30%;
+  
+}
+.copyright{
+    font-family: 'Handlee', cursive;
+    text-align: center;
+    padding-bottom: 5%;
+}
+
