--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -22,3 +22,40 @@ body {
     background-color: #202020;
     color: white;
 }
+
+.about-us{
+    font-family: 'Alkatra', cursive;
+    text-align: center;
+    margin-top: 50px;
+}
+
+@media screen and (min-width: 850px){
+    .about-info {
+      margin-left: 10%;
+      margin-right: 10%;
+      font-family: 'Dosis', sans-serif;
+      font-size: 18px;
+      display: grid;
+      align-items: center;
+      grid-template-columns: 2fr 3fr ;
+      column-gap: 5px;
+      margin: 3% 5%;
+    }
+    }
+    
+    @media screen and (max-width: 850px){
+      .about-info{
+        margin-left: 10%;
+        margin-right: 10%;
+        font-family: 'Dosis', sans-serif;
+        font-size: 18px;
+      }
+      .about-txt{
+        margin-top: 5%;
+      }
+      .about-pic{
+        margin-top: 5%;
+        width: 80%;
+        margin-left: 18%;
+      }
+    }
