--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -28,3 +28,13 @@ body {
     text-align: center;
     margin-top: 50px;
 }
+.contact-phone-link{
+    text-align: center !important;
+}
+.phone-cont{
+    color: var(--yellow);
+}
+.location{
+    text-align: center;
+    font-size: 17px;
+}
